tests/js/invalid/when/mismatched-types-2.buri
blue = #blue
result = when blue is
    #red do 1